real-time-inventory-platform/hotel-booking-service/k8s/eks/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.4-alpine
          ports:
            - containerPort: 6379
          args: ["redis-server", "--appendonly", "yes"]
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: booking
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
